# Email-Generation-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  run_evaluation.py
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: schemas.py
app/api/routes/: evaluate.py  generate.py
app/core/: chains.py  models.py  prompts.py
app/evaluation/: report.py  runner.py
app/evaluation/metrics/: fact_recall.py  professional_quality.py  tone_alignment.py
data/: scenarios.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: EvaluationDashboard.tsx  InputPanel.tsx  OutputPanel.tsx  ScenariosList.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
reports/: evaluation_results.csv  evaluation_results.json
tests/: test_generate.py
ui/: streamlit_app.py
